[gd_scene load_steps=5 format=3 uid="uid://supervisor01"]

[ext_resource type="Script" path="res://Script/supervisor.gd" id="1_script"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_rect"]
size = Vector2(64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_idle"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("PlaceholderTexture2D_rect")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="Supervisor" type="Node2D"]
script = ExtResource("1_script")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_idle")
animation = &"idle"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UIRoot" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WarningLabel" type="Label" parent="CanvasLayer/UIRoot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -20.0
offset_right = 80.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "warning"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EyeContainer" type="Control" parent="CanvasLayer/UIRoot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -30.0
offset_right = 40.0
offset_bottom = 30.0

[node name="EyeSprite" type="ColorRect" parent="CanvasLayer/UIRoot/EyeContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.25, 0.95)
grow_horizontal = 2
grow_vertical = 2
